chore: keep compatibility with JDK17